updated the docker-compose file to craete a service for the tests

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,11 @@ services:
         volumes:
             - /app/node_modules # map node_modules as is
             - .:/app # map everthing else to /app
+    test:
+        build:
+            context: .
+            dockerfile: Dockerfile.dev
+        volumes:
+            - /app/node_modules
+            - .:/app
+        command: ["npm", "run", "test"] # will run another command 
