--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ services:
     - docker
 
 before_install:
-    - docker build -t samiperalahti/docker-react -f dockerfile.dev .
+    - docker build -t samiperalahti/docker-react -f Dockerfile.dev .
 
 script:
     - docker run samiperalahti/docker-react npm run test -- --coverage
